2010-08-19
 - fixed a drawing issue, where a connection wasn't drawn to the propper center of the parent item. this has something to do with:
    case QGraphicsItem::ItemPositionHasChanged:
    case QGraphicsItem::ItemPositionChange:
   in QVariant Module::itemChange ( GraphicsItemChange change, const QVariant & value ) {
 - WARNING: the QTreeView does not show anything: regression?!
 - when moving an Module (in QGraphicsView) the new position is stored in the Model but not yet read back (only in the constructor)
   that means when save/load is implemented the modules will be back on the correct position but if the position is altered using
   the QTreeView the update won't affect the QGraphicsView until a save/load cycle is done

2010-08-18
 - DataItemType now starts at 65536 which should make it compatible to be used with QGraphicsItem->type(), did work before
   but was against the specification which could result in undefined behaviour.
 - fixed the crash issue. see the first paragraph in TODO which discusses the issue
   at least it does not crash anymore

2010-08-17
 - WARNING: when quitting the program it will crash if at least one connection exists
 - selection of Modules do look better now
 - selecting a Connection is now possible (was very tricky before to click the right pixel) as the connection has 
   a wider range where a selection can be triggered
 - fixed some code where 0,1,2.. was used instead of PortDirection::OUT or similar
 - removing a Module via Model::removeRows(..) is specified as:
   - first: remove all outgoing connections (Connection)
   - second: remove all references (Connection)
   - finally: remove the Module (Module)
 - removing a Connection via the Model::removeRows(..) is specified as: 
   - when ~Connection is called, Connection c must remove the updatereference at both attached Ports, then remove it
 - Connection do register on both Port(s), so that Port::updateConnection() will trigger Connection::update()

2010-08-14