@@ -34,7 +34,6 @@ class GraphicsView : public QGraphicsView {
     void mousePressEvent ( QMouseEvent * event );
     void mouseMoveEvent( QMouseEvent * event );
     void mouseReleaseEvent( QMouseEvent * event );
-    
     void resizeEvent(QResizeEvent* event);
 };
 
